# ExcavatorUI_Qt

./: CMakeLists.txt  Circle.qml  CircleScene.qml  CloseModelingCamera.qml  CloseScene.qml  ColorButton.qml  ColorFuel.qml  ColorMaterial.qml  DepthMaterial.qml  Excavator.qml  HalfCircle.qml  Line.qml  ModelingCamera.qml  ModelingDebugRenderInputSettings.qml  README.md  RenderSettings2.qml  SideModelingCamera.qml  SideScene.qml  SkyModelingCamera.qml  StandBoard.qml  main.qml  qml.qrc  test_main.qml
old_qt5/: CloseModelingCamera.qml  CloseScene.qml  ColorButton.qml  ColorFrameMaterial.qml  MinePlane.qml  ModelingCamera.qml  RenderSettings1.qml  RenderSettings3.qml  SideScene.qml  SkyScene.qml  Time.qml  main.qml
old_qt5/shaders/: depthmap.vert  line.frag
resources/models/excavator/: excavator_arm0.glb  excavator_arm0_wire.glb  excavator_arm1.glb  excavator_arm1_wire.glb  excavator_bucket.glb  excavator_bucket_wire.glb
resources/shaders/: circle.frag  depthmap.frag  line.vert  passthrough.vert  passthrough_color.frag
shaders/: circle.frag  colorframe.frag  depthmap.vert  halfcircle.frag  line.frag  line.vert  passthrough.vert
src/: main.cpp
src/qml/: main.qml
src/qml/components/3d/: Circle.qml  Excavator.qml  HalfCircle.qml  Line.qml  MinePlane.qml  StandBoard.qml
src/qml/components/ui/: Palette.qml
src/qml/scenes/: CircleScene.qml  CloseScene.qml  SideScene.qml  SkyScene.qml
src/qml/utils/: Inputs0.qml
